--- a/coach2.0/src/Components/css/index.css
+++ b/coach2.0/src/Components/css/index.css
@@ -55,3 +55,40 @@
   flex-direction: column;
   justify-content: space-around;
 }
+
+#sections {
+  width: 100%;
+}
+
+
+.field-section {
+  height: 25%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#forwards {
+  /* background-color: red; */
+}
+#midfielders {
+  /* background-color: orange; */
+}
+#defense {
+  /* background-color: yellow; */
+}
+#goalkeeper {
+  /* background-color: green; */
+}
+.player {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.dot {
+  height: 25px;
+  width: 25px;
+  border-radius: 50%;
+  background-color: red;
+}
