--- a/coach2.0/src/Components/css/index.css
+++ b/coach2.0/src/Components/css/index.css
@@ -15,6 +15,8 @@ body {
   align-content: center;
   height: 90vh;
   color: white;
+  opacity: .7;
+  font-weight: bold;
 }
 
 .btn {
@@ -33,8 +35,9 @@ body {
 
 }
 .box {
-  border: solid 1px black;
+  border: solid 1px white;
   display: flex;
+  justify-content: center;
   width: 45vw;
 }
 
@@ -143,6 +146,7 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
+  font-size: 30px;
   color: white;
 }
 
@@ -151,7 +155,7 @@ body {
   height: 50px;
   width: 200px;
   border-radius: 50px;
-  font-size: 1.5em;
+  font-size: 20px;
   box-shadow: 20px 15px 40px 20px rgba(0,0,0,0.27);
   background-color: rgba(0,0,0,0.7);
   color: white;
@@ -163,4 +167,8 @@ body {
   background-color: rgba(0,0,0,0.2);
   border: none;
   color: white;
+}
+
+#tacticSelect {
+  align-self: center;
 }
